Changelog
=========

2019.3.0 (unreleased)
---------------------

- Translate keyword-filter label. [phgross]
- Support searching on group description in sharing form. [phgross]
- Add CMFEditions modifier that prevents journals from being versioned. [lgraf]
- Forbid transitions linked to dossier offer process through RESTAPI. [njohner]
- Only allow dossier transitions that are possible on the main dossier. [njohner]
- Prefix agendaitem decision numbers and meeting number by correct period title. [njohner]
- Handle dossier activation through RESTAPI. [njohner]
- Sort BlockedLocalRolesList on reference number. [njohner]
- Improve error message when trying to delete a referenced document. [njohner]
- Handle dossier deactivation through RESTAPI. [njohner]
- Fix bug with resolving a reopened dossier. [njohner]
- Update documentation for SaaS deployment update. [njohner]
- Correctly handle dossier reactivation through RESTAPI. [njohner]
- Extend listing endpoint fields with file_extension and document_type. [phgross]
- Extend task API serialization with responses data. [phgross]


2019.2.4 (2019-06-07)
---------------------

- Do not sync deadline modifications to forwarding predecessors. [phgross]


2019.2.3 (2019-06-04)
---------------------

- Drop no longer working oneoffixx upgrade. [deiferni]


2019.2.2 (2019-05-27)
---------------------

- Fix revoke_permission field and validation in the fowarding forms. [phgross]
- Hide byline for the teams. [phgross]
- Cleanup/fix oneoffix upgradesteps and make dicstorage upgrades more failsafe. [phgross]
- Add french translation for spv documentation. [andresoberhaensli, njohner]
- Add french translation for task documentation. [andresoberhaensli, njohner]
- Allow viewing closed meeting when meeting dossier is closed. [njohner]


2019.2.1 (2019-05-21)
---------------------

- Show filters also on no contents page in document listings. [phgross]
- Make subject column non-sortable in storred dictstorage settings. [phgross]

