@@ -4,6 +4,7 @@ Changelog
 2019.3.0 (unreleased)
 ---------------------
 
+- Provides support for some additional metadata on the search endpoint. [phgross]
 - Translate keyword-filter label. [phgross]
 - Support searching on group description in sharing form. [phgross]
 - Add CMFEditions modifier that prevents journals from being versioned. [lgraf]
